--- a/GeneralClashRule.ini
+++ b/GeneralClashRule.ini
@@ -49,6 +49,7 @@ ruleset=🇨🇳 国内流量,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/
 ruleset=🇨🇳 国内流量,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaIp.list
 ruleset=🇨🇳 国内流量,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaDomain.list
 ruleset=🇨🇳 国内流量,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ChinaCompanyIp.list
+ruleset=🇨🇳 国内流量,https://raw.githubusercontent.com/Hackl0us/SS-Rule-Snippet/main/%E8%A7%84%E5%88%99%E7%89%87%E6%AE%B5%E9%9B%86/%E8%87%AA%E9%80%89%E8%A7%84%E5%88%99%E9%9B%86/%E5%AD%A6%E6%9C%AF%E7%BD%91%E7%AB%99-%E7%9B%B4%E8%BF%9E.txt
 ; ruleset=🚩 社交平台IP归属地,clash-classic:https://raw.githubusercontent.com/lwd-temp/anti-ip-attribution/main/generated/rule-provider.yaml
 ruleset=🇨🇳 国内流量,[]GEOIP,CN
 ruleset=🐟 漏网之鱼,[]FINAL
